Update 'Start My Protection Now' button link to subdomain

--- a/index.html
+++ b/index.html
@@ -1333,7 +1333,7 @@
                 </div>
 
                 <div>
-                    <button class="cta-button" onclick="window.location.href='/checkout'">
+                    <button class="cta-button" onclick="window.location.href='https://shop.dataguardpro.co/checkout'">
                         Start My Protection Now →
                     </button>
                 </div>
